what's left: nice plots and markdown

--- a/step-final-comparison.ipynb
+++ b/step-final-comparison.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import Environment_non_stationary\r\n",
-    "import Environment\r\n",
-    "import Shop\r\n",
-    "from mab.ucb_learner import *\r\n",
-    "from utilities import *"
+    "import mab.Environment_non_stationary\n",
+    "import mab.Environment\n",
+    "import mab.Shop\n",
+    "from mab.ucb_learner import *\n",
+    "from mab.utilities import *"
    ],
    "outputs": [],
    "metadata": {}
@@ -17,12 +17,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "shop_ts = Shop.Shop()\r\n",
-    "shop_c = Shop.Shop()\r\n",
-    "\r\n",
-    "env = Environment_non_stationary.Environment(shop_ts.prices1, shop_ts.prices2, shop_ts.discounts, n_phases=4)\r\n",
-    "s_env = Environment.Environment(shop_ts.prices1,shop_ts.prices2,shop_ts.discounts)\r\n",
-    "\r\n"
+    "shop_ts = Shop.Shop()\n",
+    "shop_c = Shop.Shop()\n",
+    "\n",
+    "env = Environment_non_stationary.Environment(shop_ts.prices1, shop_ts.prices2, shop_ts.discounts, n_phases=4)\n",
+    "s_env = Environment.Environment(shop_ts.prices1,shop_ts.prices2,shop_ts.discounts)\n",
+    "\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -31,23 +31,23 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "price_arms = [(i, j) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2))]\r\n",
-    "n_price_arms = len(price_arms)\r\n",
-    "\r\n",
-    "matching_arms = [(i, j, k, l) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2)) for k in range(shop_ts.n_classes) for l in range(len(shop_ts.discounts))]\r\n",
-    "n_matching_arms = len(matching_arms)\r\n",
-    "\r\n",
-    "##2-STEP ts\r\n",
-    "\r\n",
-    "shop_ts.set_price_learner('TS', n_price_arms)\r\n",
-    "shop_ts.set_assignment_learner('TS', n_matching_arms)\r\n",
-    "\r\n",
-    "## SLIDING WINDOW TS\r\n",
-    "days=365\r\n",
-    "frame_size = int(days / env.n_phases)\r\n",
-    "\r\n",
-    "shop_ts.set_price_learner_sw('TS', n_price_arms, frame_size=frame_size, days=days)\r\n",
-    "shop_ts.set_assignment_learner_sw('TS', n_matching_arms, frame_size=frame_size, days=days)\r\n"
+    "price_arms = [(i, j) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2))]\n",
+    "n_price_arms = len(price_arms)\n",
+    "\n",
+    "matching_arms = [(i, j, k, l) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2)) for k in range(shop_ts.n_classes) for l in range(len(shop_ts.discounts))]\n",
+    "n_matching_arms = len(matching_arms)\n",
+    "\n",
+    "##2-STEP ts\n",
+    "\n",
+    "shop_ts.set_price_learner('TS', n_price_arms)\n",
+    "shop_ts.set_assignment_learner('TS', n_matching_arms)\n",
+    "\n",
+    "## SLIDING WINDOW TS\n",
+    "days=365\n",
+    "frame_size = int(days / env.n_phases)\n",
+    "\n",
+    "shop_ts.set_price_learner_sw('TS', n_price_arms, frame_size=frame_size, days=days)\n",
+    "shop_ts.set_assignment_learner_sw('TS', n_matching_arms, frame_size=frame_size, days=days)\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -84,30 +84,30 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "##GET CLAIRVOYANT PRICE\r\n",
-    "generated_promo_ratios = np.array([0.4, 0.25, 0.2, 0.15])\r\n",
-    "max_ind_reward = max(s_env.prices1) + max(s_env.prices2)\r\n",
-    "\r\n",
-    "shop_c.set_conv_rate(s_env.true_conv1,s_env.true_conv2)\r\n",
-    "expected_rewards = np.zeros((5,5)) # price1*price2\r\n",
-    "shop_c.set_expected_customers(np.array([25, 25, 25, 25]))\r\n",
-    "customers_mean = np.array([25, 25, 25, 25])\r\n",
-    "\r\n",
-    "##### other way to calculate clairvoyant\r\n",
-    "cec = shop_c.get_customer_list()\r\n",
-    "cep = shop_c.get_promo_list(generated_promo_ratios)\r\n",
-    "\r\n",
-    "cmt, cpa, cer, ers  = shop_c.get_clairvoyant_prices_and_matching(cec, cep, 5, 5)\r\n",
-    "cp1idx = price_arms[cpa][0]\r\n",
-    "cp2idx = price_arms[cpa][1]\r\n",
-    "cp1 = s_env.prices1[cp1idx]\r\n",
-    "cp2 = s_env.prices2[cp2idx]\r\n",
-    "\r\n",
-    "cpf = shop_c.get_promo_fractions_from_tuples(cmt)\r\n",
-    "\r\n",
-    "print(cpf)\r\n",
-    "print(cp1)\r\n",
-    "print(cp2)\r\n",
+    "##GET CLAIRVOYANT PRICE\n",
+    "generated_promo_ratios = np.array([0.4, 0.25, 0.2, 0.15])\n",
+    "max_ind_reward = max(s_env.prices1) + max(s_env.prices2)\n",
+    "\n",
+    "shop_c.set_conv_rate(s_env.true_conv1,s_env.true_conv2)\n",
+    "expected_rewards = np.zeros((5,5)) # price1*price2\n",
+    "shop_c.set_expected_customers(np.array([25, 25, 25, 25]))\n",
+    "customers_mean = np.array([25, 25, 25, 25])\n",
+    "\n",
+    "##### other way to calculate clairvoyant\n",
+    "cec = shop_c.get_customer_list()\n",
+    "cep = shop_c.get_promo_list(generated_promo_ratios)\n",
+    "\n",
+    "cmt, cpa, cer, ers  = shop_c.get_clairvoyant_prices_and_matching(cec, cep, 5, 5)\n",
+    "cp1idx = price_arms[cpa][0]\n",
+    "cp2idx = price_arms[cpa][1]\n",
+    "cp1 = s_env.prices1[cp1idx]\n",
+    "cp2 = s_env.prices2[cp2idx]\n",
+    "\n",
+    "cpf = shop_c.get_promo_fractions_from_tuples(cmt)\n",
+    "\n",
+    "print(cpf)\n",
+    "print(cp1)\n",
+    "print(cp2)\n",
     "print(cer)"
    ],
    "outputs": [
@@ -131,114 +131,114 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "days = 365\r\n",
-    "\r\n",
-    "\r\n",
-    "ts_rewards_per_class_per_day = []\r\n",
-    "ts_sw_rewards_per_class_per_day = []\r\n",
-    "c_rewards_per_class_per_day = []\r\n",
-    "\r\n",
-    "customers_em = np.array([0, 0, 0, 0])\r\n",
-    "customers_ie = np.array([25, 25, 25, 25])\r\n",
-    "\r\n",
-    "for day in range(days):\r\n",
-    "    if day == 0:\r\n",
-    "        shop_ts.set_expected_customers(customers_ie)\r\n",
-    "        \r\n",
-    "    else:\r\n",
-    "        customers_em = (customers_em*(day-1) + s_env.customers) / day\r\n",
-    "        shop_ts.set_expected_customers((customers_em + 0.99).astype(int))\r\n",
-    "    \r\n",
-    "    # select the price for 2 step learner with no sliding window\r\n",
-    "    chosen_price_tuple_idx_ts = shop_ts.price_learner.pull_arm()\r\n",
-    "\r\n",
-    "    price1idx_ts = price_arms[chosen_price_tuple_idx_ts][0]\r\n",
-    "    price2idx_ts = price_arms[chosen_price_tuple_idx_ts][1]\r\n",
-    "    price1_ts = s_env.prices1[price_arms[chosen_price_tuple_idx_ts][0]]\r\n",
-    "    price2_ts = s_env.prices2[price_arms[chosen_price_tuple_idx_ts][1]]\r\n",
-    "\r\n",
-    "    # perform matching and get promo fractions for 2 step learner with no sliding window \r\n",
-    "    expected_customers_ts = shop_ts.get_customer_list()\r\n",
-    "    expected_promos_ts = shop_ts.get_promo_list(generated_promo_ratios)\r\n",
-    "    matched_tuples_ts = shop_ts.assignment_learner.pull_arm_matching(expected_customers_ts, expected_promos_ts, matching_arms, price1idx_ts, price2idx_ts)\r\n",
-    "    promo_fractions_ts = shop_ts.get_promo_fractions_from_tuples(matched_tuples_ts)\r\n",
-    "\r\n",
-    "    # perform matching and get promo fractions for learner with sliding window\r\n",
-    "    price_arm_idx_ts_sw = shop_ts.price_learner_sw.pull_arm(day)\r\n",
-    "\r\n",
-    "    price1idx_ts_sw = price_arms[price_arm_idx_ts_sw][0]\r\n",
-    "    price2idx_ts_sw = price_arms[price_arm_idx_ts_sw][1]\r\n",
-    "    price1_ts_sw = s_env.prices1[price_arms[price_arm_idx_ts_sw][0]]\r\n",
-    "    price2_ts_sw = s_env.prices2[price_arms[price_arm_idx_ts_sw][1]]\r\n",
-    "\r\n",
-    "    expected_customers_ts_sw = shop_ts.get_customer_list()\r\n",
-    "    expected_promos_ts_sw = shop_ts.get_promo_list(generated_promo_ratios)\r\n",
-    "    matched_tuples_ts_sw = shop_ts.assignment_learner_sw.pull_arm_matching(expected_customers_ts_sw, expected_promos_ts_sw, matching_arms, day, price1idx_ts_sw, price2idx_ts_sw)\r\n",
-    "    promo_fractions_ts_sw = shop_ts.get_promo_fractions_from_tuples(matched_tuples_ts_sw)\r\n",
-    "\r\n",
-    "    # simulate the day\r\n",
-    "    s_env.generate_next_day_customers()\r\n",
-    "\r\n",
-    "    enum_customers = list(enumerate(s_env.customers))\r\n",
-    "    customers = np.concatenate([np.ones(c).astype(int)*p for p,c in enum_customers])\r\n",
-    "    np.random.shuffle(customers)\r\n",
-    "\r\n",
-    "    revenue_ts = []\r\n",
-    "    revenue_ts_sw = []\r\n",
-    "    revenue_c = []\r\n",
-    "\r\n",
-    "    ts_total_reward = 0\r\n",
-    "    ts_sw_total_reward = 0\r\n",
-    "    c_total_reward = 0\r\n",
-    "\r\n",
-    "    c_count = 0\r\n",
-    "\r\n",
-    "    for cust in customers:\r\n",
-    "        ts_ind_reward = 0\r\n",
-    "        ts_sw_ind_reward = 0\r\n",
-    "\r\n",
-    "        \r\n",
-    "        selected_promo_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts[cust])\r\n",
-    "        selected_promo_ts_sw = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts_sw[cust])\r\n",
-    "        selected_promo_c = np.random.choice([0, 1, 2, 3], 1, p=cpf[cust])\r\n",
-    "\r\n",
-    "        \r\n",
-    "\r\n",
-    "        ts_buy1 = s_env.round1(cust, price1_ts)\r\n",
-    "        ts_buy2 = 0\r\n",
-    "        if ts_buy1:\r\n",
-    "            ts_buy2 = s_env.round2(cust, selected_promo_ts, price2_ts)\r\n",
-    "\r\n",
-    "        \r\n",
-    "        ts_sw_buy1 = s_env.round1(cust, price1_ts_sw)\r\n",
-    "        ts_sw_buy2 = 0\r\n",
-    "        if ts_sw_buy1:\r\n",
-    "            ts_sw_buy2 = s_env.round2(cust, selected_promo_ts_sw, price2_ts_sw)\r\n",
-    "\r\n",
-    "        ts_ind_reward = ts_buy1*price1_ts + ts_buy2*price2_ts*(1-shop_ts.discounts[selected_promo_ts])\r\n",
-    "        ts_sw_ind_reward = ts_sw_buy1*price1_ts_sw + ts_sw_buy2*price2_ts_sw*(1-shop_ts.discounts[selected_promo_ts_sw])\r\n",
-    "                \r\n",
-    "        c_ind_reward = s_env.true_conv1[cust, cp1idx]*cp1 + s_env.true_conv1[cust, cp1idx]*s_env.true_conv2[selected_promo_c, cust, cp2idx]*cp2*(1-shop_ts.discounts[selected_promo_c])\r\n",
-    "\r\n",
-    "        \r\n",
-    "        norm_ts_ind_reward = ts_ind_reward / max_ind_reward\r\n",
-    "        norm_ts_sw_reward = ts_sw_ind_reward / max_ind_reward\r\n",
-    "\r\n",
-    "        # update 2-step ts\r\n",
-    "        shop_ts.price_learner.update(chosen_price_tuple_idx_ts, norm_ts_ind_reward)\r\n",
-    "        matching_arm_index_ts = matching_arms.index((price1idx_ts, price2idx_ts, cust, selected_promo_ts))\r\n",
-    "        shop_ts.assignment_learner.update(matching_arm_index_ts, norm_ts_ind_reward)\r\n",
-    "\r\n",
-    "        shop_ts.price_learner_sw.update(price_arm_idx_ts_sw, norm_ts_sw_reward,day)\r\n",
-    "        matching_arm_index_ts_sw = matching_arms.index((price1idx_ts_sw, price2idx_ts_sw ,cust,selected_promo_ts_sw))\r\n",
-    "        shop_ts.assignment_learner_sw.update(matching_arm_index_ts_sw,norm_ts_sw_reward,day)\r\n",
-    "        \r\n",
-    "        revenue_ts.append(ts_ind_reward)\r\n",
-    "        revenue_ts_sw.append(ts_sw_ind_reward)\r\n",
-    "        revenue_c.append(c_ind_reward)\r\n",
-    "\r\n",
-    "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\r\n",
-    "    ts_sw_rewards_per_class_per_day.append(np.mean(revenue_ts_sw))\r\n",
+    "days = 365\n",
+    "\n",
+    "\n",
+    "ts_rewards_per_class_per_day = []\n",
+    "ts_sw_rewards_per_class_per_day = []\n",
+    "c_rewards_per_class_per_day = []\n",
+    "\n",
+    "customers_em = np.array([0, 0, 0, 0])\n",
+    "customers_ie = np.array([25, 25, 25, 25])\n",
+    "\n",
+    "for day in range(days):\n",
+    "    if day == 0:\n",
+    "        shop_ts.set_expected_customers(customers_ie)\n",
+    "        \n",
+    "    else:\n",
+    "        customers_em = (customers_em*(day-1) + s_env.customers) / day\n",
+    "        shop_ts.set_expected_customers((customers_em + 0.99).astype(int))\n",
+    "    \n",
+    "    # select the price for 2 step learner with no sliding window\n",
+    "    chosen_price_tuple_idx_ts = shop_ts.price_learner.pull_arm()\n",
+    "\n",
+    "    price1idx_ts = price_arms[chosen_price_tuple_idx_ts][0]\n",
+    "    price2idx_ts = price_arms[chosen_price_tuple_idx_ts][1]\n",
+    "    price1_ts = s_env.prices1[price_arms[chosen_price_tuple_idx_ts][0]]\n",
+    "    price2_ts = s_env.prices2[price_arms[chosen_price_tuple_idx_ts][1]]\n",
+    "\n",
+    "    # perform matching and get promo fractions for 2 step learner with no sliding window \n",
+    "    expected_customers_ts = shop_ts.get_customer_list()\n",
+    "    expected_promos_ts = shop_ts.get_promo_list(generated_promo_ratios)\n",
+    "    matched_tuples_ts = shop_ts.assignment_learner.pull_arm_matching(expected_customers_ts, expected_promos_ts, matching_arms, price1idx_ts, price2idx_ts)\n",
+    "    promo_fractions_ts = shop_ts.get_promo_fractions_from_tuples(matched_tuples_ts)\n",
+    "\n",
+    "    # perform matching and get promo fractions for learner with sliding window\n",
+    "    price_arm_idx_ts_sw = shop_ts.price_learner_sw.pull_arm(day)\n",
+    "\n",
+    "    price1idx_ts_sw = price_arms[price_arm_idx_ts_sw][0]\n",
+    "    price2idx_ts_sw = price_arms[price_arm_idx_ts_sw][1]\n",
+    "    price1_ts_sw = s_env.prices1[price_arms[price_arm_idx_ts_sw][0]]\n",
+    "    price2_ts_sw = s_env.prices2[price_arms[price_arm_idx_ts_sw][1]]\n",
+    "\n",
+    "    expected_customers_ts_sw = shop_ts.get_customer_list()\n",
+    "    expected_promos_ts_sw = shop_ts.get_promo_list(generated_promo_ratios)\n",
+    "    matched_tuples_ts_sw = shop_ts.assignment_learner_sw.pull_arm_matching(expected_customers_ts_sw, expected_promos_ts_sw, matching_arms, day, price1idx_ts_sw, price2idx_ts_sw)\n",
+    "    promo_fractions_ts_sw = shop_ts.get_promo_fractions_from_tuples(matched_tuples_ts_sw)\n",
+    "\n",
+    "    # simulate the day\n",
+    "    s_env.generate_next_day_customers()\n",
+    "\n",
+    "    enum_customers = list(enumerate(s_env.customers))\n",
+    "    customers = np.concatenate([np.ones(c).astype(int)*p for p,c in enum_customers])\n",
+    "    np.random.shuffle(customers)\n",
+    "\n",
+    "    revenue_ts = []\n",
+    "    revenue_ts_sw = []\n",
+    "    revenue_c = []\n",
+    "\n",
+    "    ts_total_reward = 0\n",
+    "    ts_sw_total_reward = 0\n",
+    "    c_total_reward = 0\n",
+    "\n",
+    "    c_count = 0\n",
+    "\n",
+    "    for cust in customers:\n",
+    "        ts_ind_reward = 0\n",
+    "        ts_sw_ind_reward = 0\n",
+    "\n",
+    "        \n",
+    "        selected_promo_ts = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts[cust])\n",
+    "        selected_promo_ts_sw = np.random.choice([0, 1, 2, 3], 1, p=promo_fractions_ts_sw[cust])\n",
+    "        selected_promo_c = np.random.choice([0, 1, 2, 3], 1, p=cpf[cust])\n",
+    "\n",
+    "        \n",
+    "\n",
+    "        ts_buy1 = s_env.round1(cust, price1_ts)\n",
+    "        ts_buy2 = 0\n",
+    "        if ts_buy1:\n",
+    "            ts_buy2 = s_env.round2(cust, selected_promo_ts, price2_ts)\n",
+    "\n",
+    "        \n",
+    "        ts_sw_buy1 = s_env.round1(cust, price1_ts_sw)\n",
+    "        ts_sw_buy2 = 0\n",
+    "        if ts_sw_buy1:\n",
+    "            ts_sw_buy2 = s_env.round2(cust, selected_promo_ts_sw, price2_ts_sw)\n",
+    "\n",
+    "        ts_ind_reward = ts_buy1*price1_ts + ts_buy2*price2_ts*(1-shop_ts.discounts[selected_promo_ts])\n",
+    "        ts_sw_ind_reward = ts_sw_buy1*price1_ts_sw + ts_sw_buy2*price2_ts_sw*(1-shop_ts.discounts[selected_promo_ts_sw])\n",
+    "                \n",
+    "        c_ind_reward = s_env.true_conv1[cust, cp1idx]*cp1 + s_env.true_conv1[cust, cp1idx]*s_env.true_conv2[selected_promo_c, cust, cp2idx]*cp2*(1-shop_ts.discounts[selected_promo_c])\n",
+    "\n",
+    "        \n",
+    "        norm_ts_ind_reward = ts_ind_reward / max_ind_reward\n",
+    "        norm_ts_sw_reward = ts_sw_ind_reward / max_ind_reward\n",
+    "\n",
+    "        # update 2-step ts\n",
+    "        shop_ts.price_learner.update(chosen_price_tuple_idx_ts, norm_ts_ind_reward)\n",
+    "        matching_arm_index_ts = matching_arms.index((price1idx_ts, price2idx_ts, cust, selected_promo_ts))\n",
+    "        shop_ts.assignment_learner.update(matching_arm_index_ts, norm_ts_ind_reward)\n",
+    "\n",
+    "        shop_ts.price_learner_sw.update(price_arm_idx_ts_sw, norm_ts_sw_reward,day)\n",
+    "        matching_arm_index_ts_sw = matching_arms.index((price1idx_ts_sw, price2idx_ts_sw ,cust,selected_promo_ts_sw))\n",
+    "        shop_ts.assignment_learner_sw.update(matching_arm_index_ts_sw,norm_ts_sw_reward,day)\n",
+    "        \n",
+    "        revenue_ts.append(ts_ind_reward)\n",
+    "        revenue_ts_sw.append(ts_sw_ind_reward)\n",
+    "        revenue_c.append(c_ind_reward)\n",
+    "\n",
+    "    ts_rewards_per_class_per_day.append(np.mean(revenue_ts))\n",
+    "    ts_sw_rewards_per_class_per_day.append(np.mean(revenue_ts_sw))\n",
     "    c_rewards_per_class_per_day.append(np.mean(revenue_c))"
    ],
    "outputs": [],
