--- a/step5.ipynb
+++ b/step5.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "source": [
     "from scipy.optimize import linear_sum_assignment\n",
-    "import Environment\n",
-    "import Shop\n",
+    "import mab.Environment\n",
+    "import mab.Shop\n",
     "from mab.ucb_learner import *\n",
-    "from utilities import *"
+    "from mab.utilities import *"
    ],
    "outputs": [],
    "metadata": {}
