--- a/step7.ipynb
+++ b/step7.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import Environment_non_stationary\r\n",
-    "import Shop\r\n",
-    "from utilities import *\r\n",
+    "import mab.Environment_non_stationary\n",
+    "import mab.Shop\n",
+    "from mab.utilities import *\n",
     "from mab.ucb_learner import *"
    ],
    "outputs": [],
@@ -16,29 +16,29 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "shop_ts = Shop.Shop()\r\n",
-    "shop_c = Shop.Shop()\r\n",
-    "\r\n",
-    "n_phases = 4\r\n",
-    "env = Environment_non_stationary.Environment(shop_ts.prices1, shop_ts.prices2, shop_ts.discounts, n_phases)\r\n",
-    "\r\n",
-    "shop_ts.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-    "shop_c.set_conv_rate(env.true_conv1, env.true_conv2)\r\n",
-    "\r\n",
-    "price_arms = [(i, j) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2))]\r\n",
-    "n_price_arms = len(price_arms)\r\n",
-    "\r\n",
-    "matching_arms = [(i, j, k, l) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2)) for k in range(shop_ts.n_classes) for l in range(len(shop_ts.discounts))]\r\n",
-    "n_matching_arms = len(matching_arms)\r\n",
-    "\r\n",
-    "shop_ts.set_price_learner('TS', n_price_arms)\r\n",
-    "shop_ts.set_assignment_learner('TS', n_matching_arms)\r\n",
-    "\r\n",
-    "\r\n",
-    "days=365\r\n",
-    "frame_size = int(days / env.n_phases)\r\n",
-    "shop_ts.set_price_learner_sw('TS', n_price_arms, frame_size=frame_size, days=days)\r\n",
-    "shop_ts.set_assignment_learner_sw('TS', n_matching_arms, frame_size=frame_size, days=days)\r\n"
+    "shop_ts = Shop.Shop()\n",
+    "shop_c = Shop.Shop()\n",
+    "\n",
+    "n_phases = 4\n",
+    "env = Environment_non_stationary.Environment(shop_ts.prices1, shop_ts.prices2, shop_ts.discounts, n_phases)\n",
+    "\n",
+    "shop_ts.set_conv_rate(env.true_conv1, env.true_conv2)\n",
+    "shop_c.set_conv_rate(env.true_conv1, env.true_conv2)\n",
+    "\n",
+    "price_arms = [(i, j) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2))]\n",
+    "n_price_arms = len(price_arms)\n",
+    "\n",
+    "matching_arms = [(i, j, k, l) for i in range(len(shop_ts.prices1)) for j in range(len(shop_ts.prices2)) for k in range(shop_ts.n_classes) for l in range(len(shop_ts.discounts))]\n",
+    "n_matching_arms = len(matching_arms)\n",
+    "\n",
+    "shop_ts.set_price_learner('TS', n_price_arms)\n",
+    "shop_ts.set_assignment_learner('TS', n_matching_arms)\n",
+    "\n",
+    "\n",
+    "days=365\n",
+    "frame_size = int(days / env.n_phases)\n",
+    "shop_ts.set_price_learner_sw('TS', n_price_arms, frame_size=frame_size, days=days)\n",
+    "shop_ts.set_assignment_learner_sw('TS', n_matching_arms, frame_size=frame_size, days=days)\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -640,7 +640,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.6",
+   "version": "3.8.10",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -652,10 +652,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3.8.10 64-bit"
   },
   "interpreter": {
-   "hash": "8dc9504be67acba47bacf60bff7f553f62706ea7a10aa24f4f54855ef6b1dd44"
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
