--- a/step8.ipynb
+++ b/step8.ipynb
@@ -15,10 +15,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import Environment_non_stationary\n",
-    "import Shop\n",
+    "import mab.Environment_non_stationary\n",
+    "import mab.Shop\n",
     "from mab.ucb_learner import *\n",
-    "from utilities import *"
+    "from mab.utilities import *"
    ],
    "outputs": [],
    "metadata": {}
