--- a/step3.ipynb
+++ b/step3.ipynb
@@ -44,11 +44,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import Environment\n",
-    "import Shop\n",
+    "import mab.Environment\n",
+    "import mab.Shop\n",
     "from mab.ts_learner import *\n",
     "from mab.ucb_learner import *\n",
-    "from utilities import *"
+    "from mab.utilities import *"
    ],
    "outputs": [],
    "metadata": {}
