--- a/step6.ipynb
+++ b/step6.ipynb
@@ -13,10 +13,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "import Environment\n",
-    "import Shop\n",
+    "import mab.Environment\n",
+    "import mab.Shop\n",
     "from mab.ucb_learner import *\n",
-    "from utilities import *"
+    "from mab.utilities import *"
    ],
    "outputs": [],
    "metadata": {}
