--- a/step5.ipynb
+++ b/step5.ipynb
@@ -14,7 +14,7 @@
    "execution_count": 1,
    "source": [
     "from scipy.optimize import linear_sum_assignment\n",
-    "import mab.Environment\n",
+    "import mab.environment\n",
     "import mab.Shop\n",
     "from mab.ucb_learner import *\n",
     "from mab.utilities import *"
