Added Markdown in all steps

--- a/step5.ipynb
+++ b/step5.ipynb
@@ -5,7 +5,9 @@
    "source": [
     "# Step 5 - Optimizing the assignment of promos\n",
     "\n",
-    "*Consider the case in which prices are fixed, but the assignment of promos to users need to be optimized by using an assignment algorithm. All the parameters need to be learnt.*"
+    "*Consider the case in which prices are fixed, but the assignment of promos to users need to be optimized by using an assignment algorithm. All the parameters need to be learnt.*\n",
+    "\n",
+    "In this scenario we know the fixed prices for both items, but the promo assign-ment needs to be learnt optimized using a matching algorithm.  To address thisproblem, at the beginning of each day we make use of the Hungarian algorithmin order to solve the promo assignment."
    ],
    "metadata": {}
   },
@@ -69,9 +71,7 @@
    "cell_type": "markdown",
    "source": [
     "## Clairvoyant offline simulation\n",
-    "The Clairvoyant is run offline assuming that it knows every variable.\n",
-    "\n",
-    "TBD"
+    "The Clairvoyant is run offline assuming that it knows every variable."
    ],
    "metadata": {}
   },
