--- a/step6.ipynb
+++ b/step6.ipynb
@@ -435,22 +435,19 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal import savgol_filter\n",
-    "\n",
     "plt.figure(figsize=(10,3))\n",
-    "plt.plot(c_rewards_per_class_per_day, color='orange',label='Clairvoyant')\n",
+    "\n",
+    "plt.plot(c_rewards_per_class_per_day, color='black', alpha=0.2)\n",
+    "plt.plot(savgol_filter(c_rewards_per_class_per_day, 45, 3), color='black', label='Clairvoyant')\n",
+    "plt.plot(ts3_rewards_per_class_per_day, color='orange', alpha=0.2)\n",
+    "plt.plot(savgol_filter(ts3_rewards_per_class_per_day, 45, 3), color='orange', label='3-step Dependent TS')\n",
     "plt.plot(ts_rewards_per_class_per_day, color='red', alpha=0.2)\n",
     "plt.plot(savgol_filter(ts_rewards_per_class_per_day, 45, 3), color='red', label='2-step TS')\n",
-    "plt.plot(small_ts_rewards_per_class_per_day, color='purple', alpha=0.2)\n",
-    "plt.plot(savgol_filter(small_ts_rewards_per_class_per_day, 45, 3), color='purple', label='3-Learner TS')\n",
-    "plt.plot(big_ts_rewards_per_class_per_day, color='blue', alpha=0.2)\n",
-    "plt.plot(savgol_filter(big_ts_rewards_per_class_per_day, 45, 3), color='blue',label='Big TS')\n",
-    "plt.plot(u_rewards_per_class_per_day, color='green', alpha=0.2)\n",
-    "plt.plot(savgol_filter(u_rewards_per_class_per_day, 45, 3), color='green',label='UCB')\n",
-    "plt.plot(ts3_rewards_per_class_per_day, color='black', alpha=0.2)\n",
-    "plt.plot(savgol_filter(ts3_rewards_per_class_per_day, 45, 3), color='black',label='3-step Dependant Ts')\n",
+    "plt.plot(big_ts_rewards_per_class_per_day, color='bluE', alpha=0.2)\n",
+    "plt.plot(savgol_filter(big_ts_rewards_per_class_per_day, 45, 3), color='bluE', label='Big TS')\n",
     "\n",
     "plt.legend()\n",
-    "plt.xlabel('Days')\n",
+    "plt.xlabel('Time')\n",
     "plt.ylabel('Revenue')"
    ],
    "outputs": [
